# C-Simple-JSON-Parser

./: .gitignore  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  MIGRATION.md  README.md  SECURITY.md  example.c  json.c  json.h
benchmarks/: README.md  bench_parse.c
tests/: test_json.c
